compiler/testData/diagnostics/testsWithStdLib/javaClassOnCompanion.diag.txt
/javaClassOnCompanion.kt:27:12: error: unresolved reference: javaClass
val e0 = E.javaClass
           ^^^^^^^^^
